# slack-chat-bot

./: .dockerignore  .gitignore  app.py  pyproject.toml  samconfig.toml  template.yaml  test.rb
.aws-sam/: build.toml
local/: app.py  csv_loader.py  custome_hybrid_serch.py  intercom_loader.py  notion_loader.py  query.py  slack_loader.py  sparse_vectors.py
slack_bot/: app.py  custome_hybrid_serch.py  requirements.txt
