[tool.poetry]
name = "slack-chat-bot"
version = "0.1.0"
description = ""
authors = ["furuichi-kotaro <54981611+furuich-kotaro@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "slack_chat_bot"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
